ncc/testsuite/negative/cg-post.n
struct X {
  public mutable x : int;
}


class M {
  public static Main () : void
  {
    X ().x = 3; // E: cannot load value type address for this expression
  }
}
